I've made further progres on the css and I've started laying a structure of js.

--- a/style.css
+++ b/style.css
@@ -1,6 +1,49 @@
 :root {
     --PADDING-HEADER: 1rem 0 2rem 0;
     --PADDING-FOOTER: 1rem 0 1rem 0;
+    --PADDING-HEADER-BUTTON: 0.5rem 1rem;
+    --PADDING-BOOK-FORM: 0.8rem;
+    --PADDING-FORM-CONTAINER: 0.4rem 0;
+    --PADDING-TEXT-AND-NUMBER-INPUT: 0.3rem;
+    /* Layouts variables*/
+    --BOOK-STORAGE-PADDING: clamp(0.3rem, 3vw, 1rem);
+    --BOOK-STORAGE-GRID-GAP: max(2vw, 0.5rem);
+    /* Colors */
+    --text: #042f29;
+    --background: #f6fefd;
+    --primary: #68f3e0;
+    --secondary: #d0fbf5;
+    --accent: #13eccf;
+    --dark-text: #fafafa;
+    --dark-background: #050505;
+    --dark-primary: #68f3e0;
+    --dark-secondary: #042f29;
+    --dark-accent: #71f4e3;
+    /* Other things */
+    --BORDER-RADIUS-GENERAL: 0.5rem;
+    /* Card variables */
+    --CARD-MIN-HEIGHT: 16rem;
+    /* Box shadows */
+    --shadow-color: 0deg 0% 62%;
+    --shadow-elevation-low:
+        0px 0.3px 0.4px hsl(var(--shadow-color) / 0.28),
+        0px 0.6px 0.7px -1px hsl(var(--shadow-color) / 0.32),
+        0px 1.3px 1.6px -2px hsl(var(--shadow-color) / 0.37);
+    --shadow-elevation-medium:
+        0px 0.3px 0.4px hsl(var(--shadow-color) / 0.29),
+        0px 1.2px 1.4px -0.7px hsl(var(--shadow-color) / 0.32),
+        0.1px 2.8px 3.4px -1.3px hsl(var(--shadow-color) / 0.36),
+        0.2px 6.5px 7.8px -2px hsl(var(--shadow-color) / 0.4);
+    --shadow-elevation-high:
+        0px 0.3px 0.4px hsl(var(--shadow-color) / 0.24),
+        0.1px 2px 2.4px -0.2px hsl(var(--shadow-color) / 0.25),
+        0.1px 3.5px 4.2px -0.5px hsl(var(--shadow-color) / 0.26),
+        0.2px 5.4px 6.5px -0.7px hsl(var(--shadow-color) / 0.28),
+        0.2px 7.9px 9.5px -1px hsl(var(--shadow-color) / 0.29),
+        0.3px 11.5px 13.8px -1.2px hsl(var(--shadow-color) / 0.3),
+        0.5px 16.5px 19.8px -1.5px hsl(var(--shadow-color) / 0.32),
+        0.7px 23.4px 28.1px -1.7px hsl(var(--shadow-color) / 0.33),
+        0.9px 32.4px 38.9px -2px hsl(var(--shadow-color) / 0.34);
 }
 
 * {
@@ -15,23 +58,112 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
+    color: var(--text);
+}
+
+a {
+    text-decoration: none;
+    color: var(--text);
 }
 
 .header {
-    border-bottom: 2px black solid;
     width: 100%;
     display: grid;
     place-items: center;
     gap: 1rem;
     padding: var(--PADDING-HEADER);
+    background-color: var(--primary);
+    box-shadow: var(--shadow-elevation-medium);
+}
+
+.header_button {
+    padding: var(--PADDING-HEADER-BUTTON);
+    background-color: var(--secondary);
+    color: var(--text);
+    border-radius: var(--BORDER-RADIUS-GENERAL);
+    font-size: 1.3rem;
+}
+
+.book_storage {
+    border: 2px solid red;
+    width: 100%;
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(15rem, 1fr));
+    padding: var(--BOOK-STORAGE-PADDING);
+    gap: var(--BOOK-STORAGE-GRID-GAP);
+}
+
+.card {
+    background-color: var(--secondary);
+    border: 2px solid black;
+    display: flex;
+    flex-direction: column;
+    border-radius: var(--BORDER-RADIUS-GENERAL);
+    min-height: var(--CARD-MIN-HEIGHT);
+    box-shadow: var(--shadow-elevation-medium);
+}
+
+.add_a_book_card {
+    justify-content: center;
+    align-items: center;
 }
 
 footer {
     position: absolute;
     bottom: 0;
-    border-top: 2px solid black;
     width: 100%;
     display: grid;
     place-items: center;
     padding: var(--PADDING-FOOTER);
+    background-color: var(--primary);
+    box-shadow: var(--shadow-elevation-medium);
+}
+
+.developer_profile:hover {
+    color: var(--dark-text);
+    text-decoration: underline;
+}
+
+.add_book_section {
+    display: block; 
+    width: clamp(16rem, 80%, 30rem);
+    position: absolute;
+    z-index: 100;
+    background-color: var(--primary);
+    border: 2px solid black;
+    top: 20%;
+    padding: var(--PADDING-BOOK-FORM);
+    border-radius: var(--BORDER-RADIUS-GENERAL);
+}
+
+.hidden {
+    display: none;
+}
+
+.form_container {
+    display: flex;
+    flex-direction: column;
+    gap: 0.3rem;
+    padding: var(--PADDING-FORM-CONTAINER);
+}
+
+.form_container:nth-child(4) {
+    flex-direction: row;
+}
+
+.form_container > label {
+    font-weight: 900;
+}
+
+.form_container > input {
+    padding: var(--PADDING-TEXT-AND-NUMBER-INPUT)
+}
+
+.have_you_read_it_checkbox {
+    accent-color: var(--accent);
+}
+
+.form_button {
+    padding: var(--PADDING-HEADER-BUTTON);
+    background-color: var(--secondary);
 }
